# kiuk

./: README.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: publish.yml
src/kiuk/: __init__.py  cli.py  embeddings.py  search.py  store.py
tests/: test_import.py
