[project]
name = "kiuk"
version = "0.0.1"
description = "kiuk: Redefining how we remember in the new era."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11"
authors = [{ name = "DataLama" }]
keywords = ["memory", "sqlite", "vector-search", "mcp", "rag", "personal-ai"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sqlite-vec>=0.1",
    "usearch>=2.0",
]

[project.optional-dependencies]
embedding = [
    "transformers>=4.40",
    "torch>=2.0",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
]
all = ["kiuk[embedding,mcp,dev]"]

[project.urls]
Homepage = "https://github.com/DataLama/kiuk"
Repository = "https://github.com/DataLama/kiuk"
Issues = "https://github.com/DataLama/kiuk/issues"

[project.scripts]
kiuk = "kiuk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kiuk"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
